--- a/index.html
+++ b/index.html
@@ -4,118 +4,118 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Julius Zoe - Cloud Engineer</title>
-  <link rel="stylesheet" href="style.css">
   <style>
     /* Reset some default styles */
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-  
-  body {
-    font-family: Arial, sans-serif;
-    line-height: 1.6;
-    background-color: #f0f0f0;
-  }
-  
-  .container {
-    width: 80%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 20px;
-    text-align: center;
-  }
-  
-  header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
-  }
-  
-  header h1, header p {
-    margin: 0;
-    padding: 0;
-  }
-  
-  nav ul {
-    list-style-type: none;
-  }
-  
-  nav ul li {
-    display: inline;
-    margin-right: 20px;
-  }
-  
-  nav ul li a {
-    color: #fff;
-    text-decoration: none;
-  }
-  
-  section {
-    padding: 20px 0;
-  }
-  
-  #hero {
-    background-color: #007bff;
-    color: #fff;
-    text-align: center;
-    padding: 50px 0;
-  }
-  
-  #about {
-    background-color: #f8f9fa;
-    text-align: center;
-  }
-  
-  #projects {
-    background-color: #fff;
-    padding: 40px 0;
-  }
-  
-  .project {
-    margin-bottom: 20px;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 10px 0;
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-  }
-  
-    /* Additional styles specific to the index page */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      background-color: #f0f0f0;
+      color: #333;
+    }
+
+    .container {
+      width: 90%;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 20px;
+      text-align: center;
+    }
+
+    header {
+      background-color: #333;
+      color: #fff;
+      padding: 20px 0;
+      margin-bottom: 20px;
+    }
+
+    header h1 {
+      font-size: 2.5em;
+    }
+
+    header p {
+      font-size: 1.2em;
+    }
+
+    nav ul {
+      list-style-type: none;
+    }
+
+    nav ul li {
+      display: inline;
+      margin-right: 20px;
+    }
+
+    nav ul li a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    section {
+      padding: 50px 0;
+    }
+
     #hero {
       background-color: #007bff;
       color: #fff;
-      text-align: center;
       padding: 100px 0;
-    }
-
-    .profile {
       margin-bottom: 20px;
     }
 
     .profile img {
-      width: 200px;
-      height: 200px;
+      width: 150px;
+      height: 150px;
       border-radius: 50%;
       border: 5px solid #fff;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+      margin-bottom: 20px;
     }
 
     #about {
       background-color: #f8f9fa;
-      text-align: center;
-      padding: 50px 0;
     }
 
+    #projects {
+      background-color: #fff;
+    }
+
+    .project {
+      margin-bottom: 20px;
+      padding: 20px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      text-align: left;
+    }
+
+    .project h3 {
+      margin-bottom: 10px;
+      color: #007bff;
+    }
+
+    .project p {
+      margin-bottom: 10px;
+    }
+
+    footer {
+      background-color: #333;
+      color: #fff;
+      text-align: center;
+      padding: 20px 0;
+      position: relative;
+      bottom: 0;
+      width: 100%;
+      margin-top: 20px;
+    }
+
+    footer p {
+      margin: 0;
+    }
   </style>
 </head>
 <body>
@@ -125,8 +125,9 @@
       <p>Cloud Engineer</p>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="projects.html">Projects</a></li>
+          <li><a href="#hero">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
         </ul>
       </nav>
     </div>
@@ -134,9 +135,6 @@
 
   <section id="hero">
     <div class="container">
-      <div class="profile">
-        <img src="https://unsplash.com/photos/black-haired-man-making-face-sibVwORYqs0" alt="Profile Picture">
-      </div>
       <h2>Welcome to my portfolio!</h2>
       <p>I am a passionate Cloud Engineer with experience in AWS, Azure, and Google Cloud Platform.</p>
     </div>
@@ -147,6 +145,27 @@
       <h2>About Me</h2>
       <p>I specialize in designing and implementing scalable cloud solutions. My expertise includes infrastructure as code, serverless architectures, and DevOps practices.</p>
       <p>Feel free to explore my projects and get in touch!</p>
+    </div>
+  </section>
+
+  <section id="projects">
+    <div class="container">
+      <h2>Projects</h2>
+      <div class="project">
+        <h3>Project 1: Serverless Application</h3>
+        <p>Description: Developed a fully serverless application using AWS Lambda, API Gateway, and DynamoDB.</p>
+        <p>Technologies: AWS Lambda, API Gateway, DynamoDB, Node.js</p>
+      </div>
+      <div class="project">
+        <h3>Project 2: Infrastructure as Code</h3>
+        <p>Description: Implemented infrastructure as code using Terraform to provision resources on AWS.</p>
+        <p>Technologies: Terraform, AWS</p>
+      </div>
+      <div class="project">
+        <h3>Project 3: Continuous Integration/Continuous Deployment (CI/CD)</h3>
+        <p>Description: Set up CI/CD pipelines using Jenkins and Docker for automated testing and deployment.</p>
+        <p>Technologies: Jenkins, Docker, Git</p>
+      </div>
     </div>
   </section>
 
